force-app/main/default/objects/b8log_Application_Log__c/fields/Application_Sub_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Sub_Name__c</fullName>
    <label>Application Sub Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>