force-app/main/default/objects/b8log_Application_Log__c/fields/Integration_Log__c.field-meta.xml
<CustomField>
    <fullName>Integration_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Log</label>
    <referenceTo>b8log_Integration_Log__c</referenceTo>
    <relationshipLabel>b8log Application Log</relationshipLabel>
    <relationshipName>b8log_Application_Log</relationshipName>
    <type>Lookup</type>
</CustomField>